# Dixous-Rust-Google-SignIn-Frontend

./: Cargo.toml  README.md
public/: tailwind.css
src/: main.rs  router.rs
src/components/: auth.rs  home.rs  mod.rs  sign_in.rs
src/services/: auth.rs  services.rs
